--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^5.1.0",
     "body-parser": "^2.2.0",
-    "uuid": "^9.0.0",
-    "pdfkit": "^0.17.2",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.4",
-    "node-fetch": "^3.4.0"
+    "pdfkit": "^0.17.2",
+    "uuid": "^9.0.0"
   }
 }
